# structstruck

./: Cargo.toml  LICENSE  README.md
src/: imp.rs  lib.rs  test.rs  unvenial.rs
tests/: derive.rs  generics.rs
