[package]
name = "structstruck"
authors = ["Julius Michaelis <gitter@liftm.de>"]
license = "MIT"
categories = ["rust-patterns", "development-tools::procedural-macro-helpers"]
keywords = ["proc_macro", "nested", "struct"]
version = "0.2.1"
edition = "2021"
description = "Nested struct and enum definitions"
repository = "https://github.com/jcaesar/structstruck"

[lib]
proc-macro = true

[dependencies]
heck = "0.4.0"
proc-macro2 = "1.0.37"
quote = "1.0.17"
venial = "0.4.0"
