[package]
name = "structstruck"
authors = ["Julius Michaelis <gitter@liftm.de>"]
license = "MIT"
categories = ["rust-patterns", "development-tools::procedural-macro-helpers"]
keywords = ["proc_macro", "nested", "struct"]
version = "0.5.1"
edition = "2021"
description = "Nested struct and enum definitions"
repository = "https://github.com/jcaesar/structstruck"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.106"
quote = "1.0.46"
venial = "0.6.1"

[dev-dependencies]
prettyplease = "0.2.37"
syn = "2.0.118"
